# Crypto-telegram-bot

./: .env.example  COMMANDS.md  LICENSE  README.md  app.py  bot-telegram-async.py  bot.py  check_tmuxp.sh  main.py  pyproject.toml  requirements.txt  ruff.toml  utils.py
db/: env.py
infra/: docker-compose.yaml
src/: crypto_price_bot.py  main.py  telegram_handler.py  utils.py
src/core/: base.py  config.py  db.py  influxdb.py
src/models/: session.py
src/repos/: session.py
src/routers/: endpoints.py
src/schemas/: status_check.py
src/services/: MultiKernelRegression.py  bot.py  economic_calendar_table.py  errors.py  indicators.py  message.py  monitor_service.py  monitor_signal.py  price_bot.py  sentiment_service.py  session.py
src/services/custom_indicators/: pinbar_detector.py
src/utils/: logger.py
