[tool.poetry]
name = "telegram-crypto-bot"
version = "0.1.0"
description = ""
authors = ["Delus <kid21200@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
telethon = "^1.38.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
asyncpg = "^0.30.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
