[tool.poetry]
name = "telegram-crypto-bot"
version = "0.1.0"
description = ""
authors = ["Delus <kid21200@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
telethon = "^1.38.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
requests = "^2.32.3"
watchdog = "^6.0.0"
aiofiles = "^24.1.0"
tabulate = "^0.9.0"
ccxt = "^4.4.38"
mplfinance = "^0.12.10b0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
motor = "^3.6.0"
ta = "^0.11.0"
bs4 = "^0.0.2"
influxdb-client = "^1.48.0"
schedule = "^1.2.2"
cachetools = "^5.5.0"
pytz = "^2025.1"
mcp-client-cli = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = [".", "src"]